--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ jdk: oraclejdk8
 scala:
   - 2.12.1
 
-script: sbt test
+script: sbt clean coverage test coverageReport
+after_success: bash <(curl -s https://codecov.io/bash)
