--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: scala
-jdk: oraclejdk8
+jdk: openjdk8
 scala:
-  - 2.12.1
+  - 2.12.6
 
 script: sbt clean coverage test coverageReport
 after_success: bash <(curl -s https://codecov.io/bash)
